test/shouldPass/vonVolker/test10.pas
program test10;
var
    i: integer;
begin

while (true and (1=i)) do

end.