test/shouldFail/controlFlow/whileNum.pas
program Sample;
var
  i : integer = 0;

begin
// While condition must be boolean but is integer
//      v
  while i do
    i := i + 1;
end.
